--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+
     <head>
         <title>Phonettle</title>
         <link rel="stylesheet" href="style.css">
