--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
 <meta charset="utf-8">
 
     <head>
-        <title>Phonettle</title>
+        <title>Phonetle</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h1>Phonettle</h1>
-        <h2>V0.1</h2>
+        <h1>Phonettle 0.2</h1>
 
         <div id="container">
 
@@ -87,8 +86,9 @@
         <div class="center">
             <button onclick="enter()" class=littleButton>ENTER</button>
             <button onclick="undo()" class=littleButton>UNDO</button>
-
         </div>
+
+        <div id="currentWord">n/a</div>
 
         <script src="wordIPAs.js"></script>
         <script src="wordIPAInterface.js"></script>
