--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>Phonettle 0.2</h1>
+        <h1>Phonettle 0.3</h1>
 
         <div id="container">
 
@@ -18,64 +18,64 @@
         <div id="keyboard">
 
             <div class="row">
-                <button onclick="buttonClicked(1,'i')" class="keyboard-button">i</button>
-                <button onclick="buttonClicked(2,'I')" class="keyboard-button">I</button>
-                <button onclick="buttonClicked(3,'ʊ')" class="keyboard-button">ʊ</button>
-                <button onclick="buttonClicked(4,'u')" class="keyboard-button">u</button>
-                <button onclick="buttonClicked(13,'Iə')" class="keyboard-button">Iə</button>
-                <button onclick="buttonClicked(14,'eI')" class="keyboard-button">eI</button>
+                <button id=k1 onclick="buttonClicked(1,'i')" class="keyboard-button">i</button>
+                <button id=k2 onclick="buttonClicked(2,'I')" class="keyboard-button">I</button>
+                <button id=k3 onclick="buttonClicked(3,'ʊ')" class="keyboard-button">ʊ</button>
+                <button id=k4 onclick="buttonClicked(4,'u')" class="keyboard-button">u</button>
+                <button id=k13 onclick="buttonClicked(13,'Iə')" class="keyboard-button">Iə</button>
+                <button id=k14 onclick="buttonClicked(14,'eI')" class="keyboard-button">eI</button>
                 <button class="empty-button">?</button>
                 <button class="empty-button">?</button>
             </div>
             <div class="row">
-                <button onclick="buttonClicked(5,'e')" class="keyboard-button">e</button>
-                <button onclick="buttonClicked(6,'ə')" class="keyboard-button">ə</button>
-                <button onclick="buttonClicked(7,'ɜ')" class="keyboard-button">ɜ</button>
-                <button onclick="buttonClicked(8,'ɔ')" class="keyboard-button">ɔ</button>
-                <button onclick="buttonClicked(16,'ɔI')" class="keyboard-button">ɔI</button>
-                <button onclick="buttonClicked(17,'əʊ')" class="keyboard-button">əʊ</button>
+                <button id=k5 onclick="buttonClicked(5,'e')" class="keyboard-button">e</button>
+                <button id=k6 onclick="buttonClicked(6,'ə')" class="keyboard-button">ə</button>
+                <button id=k7 onclick="buttonClicked(7,'ɜ')" class="keyboard-button">ɜ</button>
+                <button id=k8 onclick="buttonClicked(8,'ɔ')" class="keyboard-button">ɔ</button>
+                <button id=k16 onclick="buttonClicked(16,'ɔI')" class="keyboard-button">ɔI</button>
+                <button id=k17 onclick="buttonClicked(17,'əʊ')" class="keyboard-button">əʊ</button>
                 <button class="empty-button">?</button>
                 <button class="empty-button">?</button>
             </div>
             <div class="row">
-                <button onclick="buttonClicked(9,'æ')" class="keyboard-button">æ</button>
-                <button onclick="buttonClicked(10,'ʌ')" class="keyboard-button">ʌ</button>
-                <button onclick="buttonClicked(11,'a')" class="keyboard-button">a</button>
-                <button onclick="buttonClicked(12,'ɒ')" class="keyboard-button">ɒ</button>
-                <button onclick="buttonClicked(18,'eə')" class="keyboard-button">eə</button>
-                <button onclick="buttonClicked(19,'aI')" class="keyboard-button">aI</button>
-                <button onclick="buttonClicked(20,'aʊ')" class="keyboard-button">aʊ</button>
+                <button id=k9 onclick="buttonClicked(9,'æ')" class="keyboard-button">æ</button>
+                <button id=k10 onclick="buttonClicked(10,'ʌ')" class="keyboard-button">ʌ</button>
+                <button id=k11 onclick="buttonClicked(11,'a')" class="keyboard-button">a</button>
+                <button id=k12 onclick="buttonClicked(12,'ɒ')" class="keyboard-button">ɒ</button>
+                <button id=k18 onclick="buttonClicked(18,'eə')" class="keyboard-button">eə</button>
+                <button id=k19 onclick="buttonClicked(19,'aI')" class="keyboard-button">aI</button>
+                <button id=k20 onclick="buttonClicked(20,'aʊ')" class="keyboard-button">aʊ</button>
                 <button class="empty-button">?</button>
             </div>
             <div class="row">
-                <button onclick="buttonClicked(21,'p')" class="keyboard-button">p</button>
-                <button onclick="buttonClicked(22,'f')" class="keyboard-button">f</button>
-                <button onclick="buttonClicked(23,'t')" class="keyboard-button">t</button>
-                <button onclick="buttonClicked(24,'θ')" class="keyboard-button">θ</button>
-                <button onclick="buttonClicked(25,'tʃ')" class="keyboard-button">tʃ</button>
-                <button onclick="buttonClicked(26,'s')" class="keyboard-button">s</button>
-                <button onclick="buttonClicked(27,'ʃ')" class="keyboard-button">ʃ</button>
-                <button onclick="buttonClicked(28,'k')" class="keyboard-button">k</button>
+                <button id=k21 onclick="buttonClicked(21,'p')" class="keyboard-button">p</button>
+                <button id=k22 onclick="buttonClicked(22,'f')" class="keyboard-button">f</button>
+                <button id=k23 onclick="buttonClicked(23,'t')" class="keyboard-button">t</button>
+                <button id=k24 onclick="buttonClicked(24,'θ')" class="keyboard-button">θ</button>
+                <button id=k25 onclick="buttonClicked(25,'tʃ')" class="keyboard-button">tʃ</button>
+                <button id=k26 onclick="buttonClicked(26,'s')" class="keyboard-button">s</button>
+                <button id=k27 onclick="buttonClicked(27,'ʃ')" class="keyboard-button">ʃ</button>
+                <button id=k28 onclick="buttonClicked(28,'k')" class="keyboard-button">k</button>
             </div>
             <div class="row">
-                <button onclick="buttonClicked(29,'b')" class="keyboard-button">b</button>
-                <button onclick="buttonClicked(30,'v')" class="keyboard-button">v</button>
-                <button onclick="buttonClicked(31,'d')" class="keyboard-button">d</button>
-                <button onclick="buttonClicked(32,'ð')" class="keyboard-button">ð</button>
-                <button onclick="buttonClicked(33,'dʒ')" class="keyboard-button">dʒ</button>
-                <button onclick="buttonClicked(34,'z')" class="keyboard-button">z</button>
-                <button onclick="buttonClicked(35,'ʒ')" class="keyboard-button">ʒ</button>
-                <button onclick="buttonClicked(36,'g')" class="keyboard-button">g</button>
+                <button id=k29 onclick="buttonClicked(29,'b')" class="keyboard-button">b</button>
+                <button id=k30 onclick="buttonClicked(30,'v')" class="keyboard-button">v</button>
+                <button id=k31 onclick="buttonClicked(31,'d')" class="keyboard-button">d</button>
+                <button id=k32 onclick="buttonClicked(32,'ð')" class="keyboard-button">ð</button>
+                <button id=k33 onclick="buttonClicked(33,'dʒ')" class="keyboard-button">dʒ</button>
+                <button id=k34 onclick="buttonClicked(34,'z')" class="keyboard-button">z</button>
+                <button id=k35 onclick="buttonClicked(35,'ʒ')" class="keyboard-button">ʒ</button>
+                <button id=k36 onclick="buttonClicked(36,'g')" class="keyboard-button">g</button>
             </div>
             <div class="row">
-                <button onclick="buttonClicked(37,'h')" class="keyboard-button">h</button>
-                <button onclick="buttonClicked(38,'m')" class="keyboard-button">m</button>
-                <button onclick="buttonClicked(39,'n')" class="keyboard-button">n</button>
-                <button onclick="buttonClicked(40,'ŋ')" class="keyboard-button">ŋ</button>
-                <button onclick="buttonClicked(41,'r')" class="keyboard-button">r</button>
-                <button onclick="buttonClicked(42,'l')" class="keyboard-button">l</button>
-                <button onclick="buttonClicked(43,'w')" class="keyboard-button">w</button>
-                <button onclick="buttonClicked(44,'j')" class="keyboard-button">j</button>
+                <button id=k37 onclick="buttonClicked(37,'h')" class="keyboard-button">h</button>
+                <button id=k38 onclick="buttonClicked(38,'m')" class="keyboard-button">m</button>
+                <button id=k39 onclick="buttonClicked(39,'n')" class="keyboard-button">n</button>
+                <button id=k40 onclick="buttonClicked(40,'ŋ')" class="keyboard-button">ŋ</button>
+                <button id=k41 onclick="buttonClicked(41,'r')" class="keyboard-button">r</button>
+                <button id=k42 onclick="buttonClicked(42,'l')" class="keyboard-button">l</button>
+                <button id=k43 onclick="buttonClicked(43,'w')" class="keyboard-button">w</button>
+                <button id=k44 onclick="buttonClicked(44,'j')" class="keyboard-button">j</button>
             </div>
         </div>
 
